# netbot

./: README.md  gst.txt
client/: camera_msg.py  camera_prop_msg.py  chassis.py  client.py  gpio.py  image_msg.py  main.py  message.py  move_msg.py
server/: Cargo.toml
server/src/: camera_msg.rs  camera_prop_msg.rs  cmdui.rs  image_msg.rs  main.rs  message.rs  move_msg.rs  robot.rs  robot_interface.rs  server.rs  ui.rs  windowui.rs
