[package]
name = "rust"
version = "0.1.0"
authors = ["Kirill Kolodiazhnyi <rotate@ukr.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.45", features = ["contrib"]}
slice_as_array = {version = "1.1.0"}