[package]
name = "server"
version = "0.1.0"
authors = ["Kirill Kolodiazhnyi <rotate@ukr.net>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
opencv = {version = "0.46", features = ["contrib"]}
slice_as_array = {version = "1.1.0"}
gtk = {version = "0.9.2"}
gio = {version = "0.9.1"}
cairo-rs = {version = "0.9.0"}
gdk-pixbuf = {version = "0.9.0"}
gdk = {version = "0.13.2"}
glib = {version = "0.10.3"}
